# dapa-zodiac-wallet

./: README.md  justfile  pubspec.yaml
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/features/authentication/application/: authentication_service.dart  biometric_auth_provider.dart  secure_storage_provider.dart  wallets_state_provider.dart
lib/features/logger/: logger.dart
lib/features/router/: router.dart  routes.dart
lib/l10n/: app_ar.arb  app_bg.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_hi.arb  app_it.arb  app_ja.arb  app_ko.arb  app_ms.arb  app_nl.arb  app_pl.arb  app_pt.arb  app_ru.arb  app_tr.arb  app_uk.arb  app_zh.arb
lib/shared/providers/: progress_report_provider.dart
lib/shared/resources/: app_resources.dart
lib/shared/theme/: dark.dart  extensions.dart  input_decoration.dart  light.dart  xelis.dart
lib/shared/utils/: utils.dart
lib/shared/widgets/: app_initializer.dart  zodiac_app.dart
linux/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Base.lproj/: MainMenu.xib
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/api/: address_book.rs  precomputed_tables.rs  seed_search_engine.rs  utils.rs  wallet.rs  xswd.rs
rust/src/api/models/: address_book_dtos.rs  network.rs  wallet_dtos.rs
web/: index.html  manifest.json
windows/runner/: Runner.rc  zodiac-package.iss
(+122 files in other folders)
